handle exception.